# Slice-Configuration-Protocol

./: .gitignore  Makefile.am  README.md  configure.ac
NoSlicingController/: Makefile.am  README.md  common.h  controllerMain.cpp  routerController.cpp  routerController.h
P4SlicingController/: README.md  common.h  controllerMain2.cpp  delete_queues.sh  localController.c  routerController.cpp  routerController.h  setupSlice1.sh
P4src/: NoSlicing.p4  P4Slicing.p4  README.md  SDNSlicing.p4
SDNSlicingController/: README.md  common.h  controllerMain.cpp  routerController.cpp  routerController.h
mininetScripts/: 14node.py  14node_with_lc.py  24node.py  24node_with_lc.py  4node.py  4node_with_lc.py  6node.py  6node_with_lc.py  README.md  TactileClientFile.c  TactileClientStatic.c  TactileServer.c  client  p4_mininet.py  run_controller.sh  server  startMeasurment.sh  startMultipleMeasurments.sh
routerConfigs/conf14/: 10_conf.txt  11_conf.txt  12_conf.txt  13_conf.txt  14_conf.txt  15_conf.txt  2_conf.txt  3_conf.txt  4_conf.txt  5_conf.txt  6_conf.txt  7_conf.txt  8_conf.txt  9_conf.txt
routerConfigs/conf24/: 10_conf.txt  11_conf.txt  12_conf.txt  13_conf.txt  14_conf.txt  15_conf.txt  16_conf.txt  17_conf.txt  18_conf.txt  19_conf.txt  20_conf.txt  21_conf.txt  22_conf.txt  23_conf.txt  24_conf.txt  25_conf.txt  2_conf.txt  3_conf.txt  4_conf.txt  5_conf.txt  6_conf.txt  7_conf.txt  8_conf.txt  9_conf.txt
routerConfigs/conf4/: 2_conf.txt  3_conf.txt  4_conf.txt  5_conf.txt
routerConfigs/conf6/: 2_conf.txt  3_conf.txt  4_conf.txt  5_conf.txt  6_conf.txt  7_conf.txt
